--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+TRELLO_CLIENT_ID=twoj_trello_client_id
+TRELLO_CLIENT_SECRET=twoj_trello_client_secret
+TRELLO_REDIRECT_URI=http://twoja_domena.com/auth/trello/callback
